--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bara nav</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="baraNav">
+        <div class="menuItem"><img src="img/logo.png"></div>
+        <div class="menuItem">Home</div>
+        <div class="menuItem">About Us</div>
+        <div class="menuItem">Our Clients</div>
+        <div class="menuItem">Contact Us</div>
+    </div>
 </body>
 </html>
