--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="baraNav">
-        <div class="menuItem"><img src="img/logo.png"></div>
-        <div class="menuItem">Home</div>
-        <div class="menuItem">About Us</div>
-        <div class="menuItem">Our Clients</div>
-        <div class="menuItem">Contact Us</div>
-    </div>
+    <header>
+        <nav>
+            <div class="menuItem"><img src="img/logo.png"></div>
+            <ul>
+                <li class="menuItem">Home</li>
+                <li class="menuItem">About Us</li>
+                <li class="menuItem">Our Clients</li>
+                <li class="menuItem">Contact Us</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
